language/move-compiler/tests/move_check/inlining/recursion.exp
error[E14001]: recursion during function inlining not allowed
   ┌─ tests/move_check/inlining/recursion.move:13:9
   │
13 │         f()
   │         ^ cyclic inlining:  -> h -> g -> f

